# RadioSensorNETFirmware

./: Makefile  README.md  battery.h  client.ino  definitions.h  mqtt_abstraction.cpp  mqtt_abstraction.h  temperature_sensor.cpp  temperature_sensor.h  tools.cpp  tools.h
temp_and_humi_sensor/hw/: eagle.epf  sensor_board.brd  sensor_board.sch
temp_and_humi_sensor/src/: Makefile  battery.cpp  client.ino  memdebug.h  serial_reader.h  temperature_sensor.h  tools.h
tests/: CMakeLists.txt  serial_reader_tests.cpp  tools_tests.cpp
